Fix product image overflowing in modal

--- a/great-western-wine-theme/assets/scss/components/foundation/modal/_modal.scss
+++ b/great-western-wine-theme/assets/scss/components/foundation/modal/_modal.scss
@@ -59,7 +59,15 @@
 .modal-body {
     -webkit-overflow-scrolling: touch;
     padding: $reveal-modal-padding;
+    
+    .productView-img-container {
+        height: 80%;
 
+        @include breakpoint("medium") {
+            height: 100%;
+        }
+    }
+    
     .productGrid .product {
         width: 33%;
     }
